# kapanadze-mathtools

./: .gitignore  DEPLOYMENT_GUIDE.md  LICENSE  PYPI_FORM_GUIDE.md  README.md  TUTORIAL.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: publish.yml
examples/: demo.py
kapanadze_mathtools/: __init__.py  converters.py  geometry.py  statistics.py  text_tools.py
