[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kapanadze-mathtools"
version = "0.1.0"
description = "მარტივი მათემატიკური ხელსაწყოები Python-ისთვის"
readme = "README.md"
authors = [{name = "Kapanadze", email = "your.email@example.com"}]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "Topic :: Education",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.7"

[project.urls]
Homepage = "https://github.com/yourusername/kapanadze-mathtools"
Repository = "https://github.com/yourusername/kapanadze-mathtools"
